# ros2_camera_lidar_fusion

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  setup.cfg  setup.py
config/: camera_extrinsic_calibration.yaml  camera_intrinsic_calibration.yaml  general_configuration.yaml
data/: 20250204_122704.pcd  20250204_163317.pcd  20250204_163436.pcd  20250204_163441.pcd  20250204_163449.pcd  20250206_162048.pcd  20250206_162056.pcd  20250206_162112.pcd  20250206_162116.pcd  20250206_162122.pcd  20250206_162130.pcd  20250206_162205.pcd  20250206_162215.pcd  20250206_162218.pcd  20250206_162437.pcd  20250206_162531.pcd  20250212_161101.pcd  20250212_161109.pcd  20250212_161115.pcd  20250212_161122.pcd  20250212_161125.pcd  20250212_161552.pcd  20250212_161836.pcd  20250212_161914.pcd  20250212_161938.pcd  ros2_camera_lidar_fusion_correspondences.txt
data1/: 20250203_134443.pcd  20250203_153815.pcd  ros2_camera_lidar_fusion_correspondences.txt
docker/: Dockerfile  build.sh  run.sh
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/ros2_camera_lidar_fusion/lib/ros2_camera_lidar_fusion/: extract_points  get_extrinsic_camera_calibration  get_intrinsic_camera_calibration  lidar_camera_projection  save_data
install/ros2_camera_lidar_fusion/share/ros2_camera_lidar_fusion/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ros2_camera_lidar_fusion/share/ros2_camera_lidar_fusion/config/: general_configuration.yaml
launch/: rviz2_launch.py
ros2_camera_lidar_fusion/: calculate_calibration.py  extract_points.py  fusion_lidar_camera.py  get_extrinsic_camera_calibration.py  get_intrinsic_camera_calibration.py  lidar_camera_projection.py  project_boxes_cones_points.py  project_cones_and_points.py  read_yaml.py  save_sensor_data.py
